--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,52 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+.navigation-bar {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100vw;
+  height: 120px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2); /* เพิ่มเงา */
+}
+.App{
+  width: 100vw;
+  height: 100vh;
+  background-color: white;
+}
+.logo-image{
+  width: 120px;
+  height: 90px;
+  margin-left: 120px;
+  margin-top: 10px;
+}
+.manu{
+  display: flex;
+  width: 25%;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  color :gray;
+  margin-right: 300px;
+}
+.manu:hover{
+  color :green;
+}
+.button-movies,
+.button-tv {
+  border: none;
+  background-color: whitesmoke;
+  color: gray;
+  font-weight: 600;
+  font-size: 1.5rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.button-movies:hover,
+.button-tv:hover {
+  color: orange;
+  border: none; 
 }
